# AutoML

./: .gitignore  ACschedulingAlgo.py  README.md  RLschedulingAlgo.py  cur_submission_dict.pkl  delete.sh  dl2_offline.py  dl2_online.py  genetic_algorithm.py  job_name_constants.py  job_submission.py  job_submission_possion.py  jst-test_pkl  jst-train_pkl  jst_dataloader.py  jst_extraction.py  k8s_methods_test.py  k8s_methods_test1.py  kubeconfig.yaml  log_analysis.py  model.ckpt  monitor_writer.py  monitoring.py  monitoring1.py  my_logging.py  performance_model.py  performance_offline.py  performance_online.py  pyvenv.cfg  sa_dataloader.py  sa_training.py  sche_extraction.py  sche_training.py  schedulingAlgo.py  test.py  test.txt  test.yaml  test1.py  test2.py  testfile.txt  (+2 more)
python/automl/: README.md  pyproject.toml
python/automl/alserver/: __main__.py  errors.py  server.py  settings.py
python/automl/alserver/cruds/: experiment.py  training_project_crud.py
python/automl/alserver/handlers/: dataplane.py
python/automl/alserver/models/: experiment.py  taining_project_model.py
python/automl/alserver/operators/: __init__.py  errors.py  settings.py  tfjob.py  training_client.py  utils.py
python/automl/alserver/rest/: app.py  endpoints.py
python/automl/alserver/schemas/: input_schema.py  input_schemas.py  output_schema.py  output_schemas.py
python/automl/alserver/utils/: dataplane_utils.py  generic_utils.py  logging.py
python/automl/automl/: __init__.py  errors.py  server.py  settings.py
python/automl/automl/autoselect/selection/: model_selection.py  settings.py
python/automl/automl/databases/: __init__.py
python/automl/automl/databases/mysql/: __init__.py  server.py
python/automl/automl/datasets/: generate_random_data.py
python/automl/automl/handlers/: dataplane.py
python/automl/automl/models/: __init__.py
python/automl/automl/models/auto/: __init__.py  configuration_auto.py  feature_extraction_auto.py  modeling_auto.py
python/automl/automl/models/densenet/: __init__.py  configuration_densenet.py  feature_extraction_densenet.py  modeling_ak_densenet.py
python/automl/automl/models/utils/: __init__.py  feature_extraction_utils.py
python/automl/automl/monitor/: __init__.py  monitoring.py  resource_monitor.py
python/automl/automl/operators/: __init__.py  settings.py  tfjob.py
python/automl/automl/rest/: app.py  endpoints.py
python/automl/automl/schemas/: __init__.py  input_schemas.py
python/automl/automl/utils/: __init__.py  cloud_native_client.py
python/automl/autoschedule/: __init__.py
python/automl/autoschedule/monitor/: host_info.json
python/automl/autoselect/: __init__.py
python/automl/autoselect/resources/: automl-models-metadata-zh.jsonl  automl-models-metadata.jsonl
python/automl/autoselect/selection/: __init__.py  model_selection.py  settings.py
python/automl/autoselect/utils/: logging.py
python/automl/autotrain/: __init__.py
python/automl/autotrain/datasets/: generate_random_data.py  load.py  structured-data-classification.csv
python/automl/autotrain/examples/image_data/: run_resnet.py
python/automl/autotrain/trainers/: __init__.py
python/automl/autotrain/utils/: generic_utils.py
python/automl/tests/: auto_factory_test.py  feature_extraction_test.py  hyperparameter_tuning_test.py  lea.ipynb  learning.ipynb  learninig.ipynb  monitor_test.py  mysql_server_test.py  re.txt  summary.json  t.json  t.py  test_auto_factory.py  test_auto_select.py  test_auto_train.py  test_dataplane.py  test_feature_extraction.py  test_host_info.json  test_hyperparameter_tuning.py  test_model_selection.py  test_monitor.py  test_mysql_server.py  test_run_trainer_in_container.py  test_tfjob_operator.py  test_train_func.py  test_websocket.py  tfjob_operator_test.py
python/autoselect/: README.md  pyproject.toml
python/autoselect/autoselect/: .env
python/autoselect/autoselect/resources/: automl-models-metadata.jsonl
python/autoselect/autoselect/selection/: __init__.py  llm_factory.py  model_selection.py  settings.py
python/autoselect/tests/: learning.ipynb  test_model_selection.py
python/autotrain/: README.md  pyproject.toml  re.txt
python/autotrain/autotrain/: __init__.py
python/autotrain/autotrain/datasets/: extracted-structured-data-classification.csv  load.py  structured-data-regression.csv  train.csv
python/autotrain/autotrain/trainers/: __init__.py
python/autotrain/autotrain/trainings/: __init__.py
python/autotrain/autotrain/utils/: __init__.py  configuration_utils.py  trainer_utils.py
python/autotrain/tests/: auto_argparser_test.py  auto_factory_test.py  feature_extraction_test.py  hyperparameter_tuning_test.py  learning.ipynb  test_auto_argparser.py  test_auto_factory.py  test_auto_train.py  test_feature_extraction.py  test_hyperparameter_tuning.py  test_train_func.py  test_trainer_auto.py
training/python/training_app/: README.md  pyproject.toml  re.txt  requirements.txt
training/python/training_app/training_app/: crud.py  database.py  main.py  models.py  schemas.py  training_controller.py  training_operator_client.py
training/python/training_script/: README.md  image_classification.Dockerfile  pyproject.toml  requirements.txt
training/python/training_script/huggingface_training_script/: run_image_classification.py
training/python/training_script/image_classification_training_script/: run_image_classification.py
training/python/training_script/test/: image_classification_training.yaml  test_pull_data_from_minio.py  test_pull_model_from_minio.py  test_push_to_minio.py  test_storage.py
tserve/python/image_classification_server/: README.md  pyproject.toml
tserve/python/image_classification_server/image_classification_server/: __init__.py  __main__.py  ic_model_repository.py  model.py
tserve/python/tserve/: Dockerfile  README.md  pyproject.toml  re.txt  requirements.txt
tserve/python/tserve/test/: __main__.py  custom_model.py  custom_model_repository.py  test_model_server.py
tserve/python/tserve/tserve/: __init__.py  errors.py  model.py  model_repository.py  model_server.py  settings.py
(+284 files in other folders)
