[tool.poetry]
name = "automl"
version = "0.0.1"
description = "AutoML project"
authors = ["automl-team"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "automl" },
]

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
priority = "default"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
uvicorn = { version = "^0.19.0", extras = ["standard"] }
fastapi = "^0.95.0"
orjson = "^3.8.0"
python-multipart = "^0.0.6"
httpx = "~0.25.0"
kubeflow-training = "~1.6.0"
kubernetes = "~27.2.0"
fabric = "^3.2.2"

# AutoSelect dependencies
pydantic = "1.10.13"
Pillow = "~10.1.0"
tiktoken = "~0.5.1"
pydub = "~0.25.1"
diffusers = "~0.21.4"
langchain = "^0.1.1"
pytest = "^7.4.4"
python-dotenv = "^1.0.0"
langchain-openai = "^0.0.2.post1"


# Storage dependencies. They can be opted into by apps.
minio = { version = "^7.1.17", optional = true }
SQLAlchemy = {version = "~2.0.19", optional = true }
PyMySQL = {version = "~1.1.0", optional = true }

[tool.poetry.extras]
storage = [
    "SQLAlchemy",
    "PyMySQL",
]

[tool.poetry-version-plugin]
source = "file"
file_path = "../VERSION"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"