[tool.poetry]
name = "autoselect"
version = "0.0.1"
description = "Model selection by LLM"
authors = ["treasures"]
readme = "README.md"
packages = [
    { include = "autoselect" },
]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pydantic = "1.10.13"
Pillow = "~10.1.0"
tiktoken = "~0.5.1"
pydub = "~0.25.1"
diffusers = "~0.21.4"
langchain = "^0.1.1"
python-dotenv = "^1.0.0"
langchain-openai = "^0.0.2.post1"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[tool.poetry-version-plugin]
source = "file"
file_path = "../VERSION"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"