[tool.poetry]
name = "training_app"
version = "0.0.1"
description = "Triainig app."
authors = ["treasures"]
readme = "README.md"
packages = [
    { include = "training_app" },
]

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
priority = "default"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
fastapi = "~0.100.0"
httpx = "~0.25.0"
kubeflow-training = "~1.6.0"
kubernetes = "~27.2.0"
pydantic = "~2.1.1"
six = "~1.16.0"
SQLAlchemy = "~2.0.19"
uvicorn = "~0.23.1"
PyMySQL = "~1.1.0"
python-multipart = "~0.0.6"

[tool.poetry-version-plugin]
source = "file"
file_path = "../VERSION"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"