[tool.poetry]
name = "huggingface_training_env"
version = "0.0.1"
description = "Triainig environment for huggingface model."
authors = ["treasures"]
readme = "README.md"
packages = [
    { include = "image_classification_training_script" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
six = "~1.16.0"
torch = "~2.0.1"
torchvision = "~0.15.2"
scikit-learn = "~1.3.0"
transformers = "~4.33.2"
Pillow = "~10.0.0"
accelerate = "~0.21.0"
evaluate = "~0.4.0"
datasets = "~2.14.1"

[tool.poetry-version-plugin]
source = "file"
file_path = "../VERSION"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"